# onnxcli

./: .gitignore  Makefile  README.md  converted.json  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: codecov.yml
.github/workflows/: build.yaml  build.yml  codeql-analysis.yml  sanity.yaml
assets/tests/: conv.float32.onnx
onnx-cli/: __init__.py
onnxcli/: __init__.py  check.py  common.py  convert.py  dispatcher.py  draw.py  extract.py  infer_shape.py  inspect.py  optimize.py  setup.py
scripts/: build-wheel.sh  upload-pip.sh
tests/: test_dispatcher.py  test_placehold.py
