[metadata]
name=onnxcli
version = attr: onnxcli.__version__
description = Lightweight Command Line Toolbox for ONNX

author = 王振华(Zhenhua WANG)
author_email = i@jackwish.net
url = https://jackwish.net/onnxcli

long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
keywords = onnx, deep-learning

project_urls =
    Bug Reports = https://github.com/jackwish/onnxcli/issues
    Source = https://github.com/jackwish/onnxcli

classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
install_requires =
    onnx
python_requires = >=3.6.*, <4
packages = find:


[flake8]
max-line-length = 100
max-complexity = 10

[tool:pytest]
log_level = DEBUG
