[metadata]
name=onnxcli
version = attr: onnxcli.__version__
description = Lightweight Command Line Toolbox for ONNX

author = 王振华(Zhenhua WANG)
author_email = hi@zhenhuaw.me
url = https://zhenhuaw.me/onnxcli

long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
keywords = onnx, deep-learning

project_urls =
    Bug Reports = https://github.com/zhenhuaw-me/onnxcli/issues
    Source = https://github.com/zhenhuaw-me/onnxcli

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence


[options]
install_requires = onnx
python_requires = >=3.6.*, <4
packages = find:

[options.entry_points]
console_scripts =
    onnx = onnxcli.dispatcher:dispatch
    onnxcli = onnxcli.dispatcher:dispatch


[tool:pytest]
log_level = DEBUG
